--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Index</title>
 </head>
 <body>
+    <!-- ตำแหน่งที่ต้องการให้แสดง Navbar -->
+    <iframe src="includes/navbar.html" width="100%" height="300px" frameborder="0"></iframe>
     <h2>Hello world</h2>
 </body>
 </html>
