--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Index</title>
 </head>
 <body>
     <h2>Hello world</h2>
+    <div class="container" >
+        <img src="image1.jpg" alt="Image 1" class="item-1">
+        <img src="image2.jpg" alt="Image 2" class="item-2">
+        <img src="image3.jpg" alt="Image 3" class="item-3">
+    </div>
 </body>
 </html>
