--- a/index.html
+++ b/index.html
@@ -9,11 +9,51 @@
 <body>
     <!-- ตำแหน่งที่ต้องการให้แสดง Navbar -->
     <iframe src="includes/navbar.html" width="100%" height="300px" frameborder="0"></iframe>
-    <h2>Hello world</h2>
-    <div class="container" >
-        <img src="image1.jpg" alt="Image 1" class="item-1">
-        <img src="image2.jpg" alt="Image 2" class="item-2">
-        <img src="image3.jpg" alt="Image 3" class="item-3">
+    <div class="body">
+        <div class="container">
+            <div class="card">
+                <div class="imgBx">
+                    <img src="https://cdn.pixabay.com/photo/2021/03/27/06/31/code-6127616__340.png" alt="">
+                </div>
+                <div class="contentBx">
+                    <h2>ช่าว1</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam laboriosam omnis dolore amet sequi nobis provident nisi esse optio recusandae quod.</p>
+                    <a href="">
+                        <span>Read More</span>
+                    </a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgBx">
+                    <img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747__340.png" alt="">
+                </div>
+                <div class="contentBx">
+                    <h2>ข่าว2</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam laboriosam omnis dolore amet sequi nobis provident nisi esse optio recusandae quod.</p>
+                    <a href="">
+                        <span>Read More</span>
+                    </a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgBx">
+                    <img src="https://cdn.pixabay.com/photo/2017/03/30/17/41/javascript-2189147__340.png" alt="">
+                </div>
+                <div class="contentBx">
+                    <h2>ข่าว3</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam laboriosam omnis dolore amet sequi nobis provident nisi esse optio recusandae quod.</p>
+                    <a href="">
+                        <span>Read More</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="credit">
+            Made with
+            <span style="color:tomato;font-size:20px;">❤</span>
+            by
+            <a href="https://www.learningrobo.com/">Learning Robo</a>
+        </div>
     </div>
 </body>
 </html>
