--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                     <img src="https://cdn.pixabay.com/photo/2021/03/27/06/31/code-6127616__340.png" alt="">
                 </div>
                 <div class="contentBx">
-                    <h2>ช่าว1</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam laboriosam omnis dolore amet sequi nobis provident nisi esse optio recusandae quod.</p>
+                    <h2>ข่าว1</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur .</p>
                     <a href="">
                         <span>Read More</span>
                     </a>
@@ -29,7 +29,7 @@
                 </div>
                 <div class="contentBx">
                     <h2>ข่าว2</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam laboriosam omnis dolore amet sequi nobis provident nisi esse optio recusandae quod.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur .</p>
                     <a href="">
                         <span>Read More</span>
                     </a>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="contentBx">
                     <h2>ข่าว3</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam laboriosam omnis dolore amet sequi nobis provident nisi esse optio recusandae quod.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur .</p>
                     <a href="">
                         <span>Read More</span>
                     </a>
