--- a/index.html
+++ b/index.html
@@ -4,56 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+ 
     <title>Index</title>
 </head>
 <body>
     <!-- ตำแหน่งที่ต้องการให้แสดง Navbar -->
     <iframe src="includes/navbar.html" width="100%" height="300px" frameborder="0"></iframe>
-    <div class="body">
-        <div class="container">
-            <div class="card">
-                <div class="imgBx">
-                    <img src="https://cdn.pixabay.com/photo/2021/03/27/06/31/code-6127616__340.png" alt="">
-                </div>
-                <div class="contentBx">
-                    <h2>ข่าว1</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur .</p>
-                    <a href="">
-                        <span>Read More</span>
-                    </a>
-                </div>
-            </div>
-            <div class="card">
-                <div class="imgBx">
-                    <img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747__340.png" alt="">
-                </div>
-                <div class="contentBx">
-                    <h2>ข่าว2</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur .</p>
-                    <a href="">
-                        <span>Read More</span>
-                    </a>
-                </div>
-            </div>
-            <div class="card">
-                <div class="imgBx">
-                    <img src="https://cdn.pixabay.com/photo/2017/03/30/17/41/javascript-2189147__340.png" alt="">
-                </div>
-                <div class="contentBx">
-                    <h2>ข่าว3</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur .</p>
-                    <a href="">
-                        <span>Read More</span>
-                    </a>
-                </div>
-            </div>
+    <div class="w3-row w3-padding w3-border w3-gray" style="margin:auto">
+      <div class="w3-card" style="width:35%;">
+        <h2>Cybersecurity News</h2>
+          <p>ข้อความ1</p>
+      </div>
+  
+      <div class="w3-card" style="width:35%;">
+        <h2></h2>
+        <h2>Free online plathorm for learning</h2>
+          <p>ข้อความ2</p>
         </div>
-        <div class="credit">
-            Made with
-            <span style="color:tomato;font-size:20px;">❤</span>
-            by
-            <a href="https://www.learningrobo.com/">Learning Robo</a>
+  </div>
+
+<h1></h1>
+    <div class="container">
+        <div class="card-group vgr-cards">
+          <div class="card">
+            <div class="card-img-body">
+            <img class="card-img" src="https://picsum.photos/500/230" alt="Card image cap">
+            </div>
+            <div class="card-body">
+              <h4 class="card-title">ข่าว 1 </h4>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
+                bit longer.</p>
+              <a href="#" class="btn btn-outline-primary">Read More</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-img-body">
+              <img class="card-img" src="https://picsum.photos/400/200" alt="Card image cap"></div>
+            <div class="card-body">
+              <h4 class="card-title">ข่าว 2</h4>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This card has supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-outline-primary">Read More</a>
+            </div>
+          </div>
+          </div>
         </div>
-    </div>
+      </div>
 </body>
 </html>
