--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <li><a href="#">Blog</a></li>
             <li><a href="#">About us</a></li>
         </ul>
-        <button class="btn_nav">Login</button>
-        <button class="btn_nav">SignUp</button>
+        <button class="btn_nav_log">Login</button>
+        <button class="btn_nav_sing">SignUp</button>
     </nav>
 
     <div class="content">
@@ -33,6 +33,7 @@
     </div>
 
 </div>
+
     <div class="w3-row w3-padding w3-border w3-gray" style="margin:auto">
       <div class="w3-card" style="width:35%;">
         <h2>Cybersecurity News</h2>
