--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@200&display=swap"
       rel="stylesheet"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>E-cop</title>
 </head>
 <body>
+
+  <!-- navbar+header -->
   <div class="containner">
     <nav>
         <img src="image/logo_alt.png" class="logo" >
@@ -32,6 +37,12 @@
         <p>TOTC is an interesting platform that will <br> teach you in more an interactive way</p>
     </div>
 
+</div>
+
+
+<div class="container col-6">
+  <i class="fa fa-newspaper-o" style="font-size:60px;"></i>
+  <i class="fa fa-university" style="font-size:48px;"></i>
 </div>
 
     <div class="w3-row w3-padding w3-border w3-gray" style="margin:auto">
@@ -77,4 +88,7 @@
         <iframe src="includes/footer.html" width="100%" height="300px" frameborder="0"></iframe>
     </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+</script>
 </html>
