--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 </div>
 
-
+<!-- icon -->
 <div class="container col-6">
   <i class="fa fa-newspaper-o" style="font-size:60px;"></i>
   <i class="fa fa-university" style="font-size:48px;"></i>
