--- a/index.html
+++ b/index.html
@@ -62,27 +62,23 @@
         <div class="card-group vgr-cards">
           <div class="card">
             <div class="card-img-body">
-            <img class="card-img" src="https://picsum.photos/500/230" alt="Card image cap">
             </div>
             <div class="card-body">
               <h4 class="card-title">ข่าว 1 </h4>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
-                bit longer.</p>
-              <a href="#" class="btn btn-outline-primary">Read More</a>
+              <p class="card-text">Simple and secure control of your organization’s financial and legal transactions. Send customized invoices and contracts.</p>
             </div>
           </div>
           <div class="card">
             <div class="card-img-body">
-              <img class="card-img" src="https://picsum.photos/400/200" alt="Card image cap"></div>
             <div class="card-body">
               <h4 class="card-title">ข่าว 2</h4>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This card has supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-outline-primary">Read More</a>
+              <p class="card-text">Simple and secure control of your organization’s financial and legal transactions. Send customized invoices and contracts.</p>
             </div>
           </div>
           </div>
         </div>
       </div>
+
       <footer>
         <iframe src="includes/footer.html" width="100%" height="300px" frameborder="0"></iframe>
     </footer>
