--- a/index.html
+++ b/index.html
@@ -1,89 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./includes/Style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@200&display=swap"
-      rel="stylesheet"
-    />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>E-cop</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./includes/Style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@200&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <title>E-cop</title>
 </head>
+
 <body>
 
   <!-- navbar+header -->
   <div class="containner">
     <nav>
-        <img src="image/logo_alt.png" class="logo" >
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Couress</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">About us</a></li>
-        </ul>
-        <button class="btn_nav_log">Login</button>
-        <button class="btn_nav_sing">SignUp</button>
+      <img src="image/logo_alt.png" class="logo">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Couress</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">About us</a></li>
+      </ul>
+      <button class="btn_nav_log">Login</button>
+      <button class="btn_nav_sing">SignUp</button>
     </nav>
 
     <div class="content">
-        <h1>Studying Online is <br> now much easier</h1>
-        <p>TOTC is an interesting platform that will <br> teach you in more an interactive way</p>
+      <h1>Studying Online is <br> now much easier</h1>
+      <p>TOTC is an interesting platform that will <br> teach you in more an interactive way</p>
     </div>
 
-</div>
-
-<!-- icon -->
-<div class="container col-6">
-  <i class="fa fa-newspaper-o" style="font-size:60px;"></i>
-  <i class="fa fa-university" style="font-size:48px;"></i>
-</div>
-
-    <div class="w3-row w3-padding w3-border w3-gray" style="margin:auto">
-      <div class="w3-card" style="width:35%;">
-        <h2>Cybersecurity News</h2>
-          <p>ข้อความ1</p>
-      </div>
-  
-      <div class="w3-card" style="width:35%;">
-        <h2></h2>
-        <h2>Free online plathorm for learning</h2>
-          <p>ข้อความ2</p>
-        </div>
   </div>
 
-    <div class="container">
-        <div class="card-group vgr-cards">
-          <div class="card">
-            <div class="card-img-body">
-            </div>
-            <div class="card-body">
-              <h4 class="card-title">ข่าว 1 </h4>
-              <p class="card-text">Simple and secure control of your organization’s financial and legal transactions. Send customized invoices and contracts.</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-img-body">
-            <div class="card-body">
-              <h4 class="card-title">ข่าว 2</h4>
-              <p class="card-text">Simple and secure control of your organization’s financial and legal transactions. Send customized invoices and contracts.</p>
-            </div>
-          </div>
+  <!-- icon -->
+  <div class="container-fluid" id="newstitle">
+    <h1>Two-In-One Cloud Software.</h1>
+    <p>TOTC is one powerful online software suite that combines all the tools needed to run a successful school or
+      office.
+    </p>
+  </div>
+  <div class="container-fluid" id="newscard">
+    <div class="card" style="width: 18rem;">
+      <div class="icon">
+        <i class="fa fa-newspaper-o" style="font-size:3rem;"></i>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Cybersecurity News</h5>
+        <p class="card-text">Simple and secure control of your organization’s financial and legal transactions. Send
+          customized invoices and contracts</p>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <div class="icon">
+        <i class="fa fa-newspaper-o" style="font-size:3rem;"></i>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">free online platform for learning cyber security</h5>
+        <p class="card-text">Simple and secure control of your organization’s financial and legal transactions. Send
+          customized invoices and contracts</p>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="container">
+    <div class="card-group vgr-cards">
+      <div class="card">
+        <div class="card-img-body">
+        </div>
+        <div class="card-body">
+          <h4 class="card-title">ข่าว 1 </h4>
+          <p class="card-text">Simple and secure control of your organization’s financial and legal transactions. Send
+            customized invoices and contracts.</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-img-body">
+          <div class="card-body">
+            <h4 class="card-title">ข่าว 2</h4>
+            <p class="card-text">Simple and secure control of your organization’s financial and legal transactions. Send
+              customized invoices and contracts.</p>
           </div>
         </div>
       </div>
+    </div>
+  </div>
 
-      <footer>
-        <iframe src="includes/footer.html" width="100%" height="300px" frameborder="0"></iframe>
-    </footer>
+  <footer>
+    <iframe src="includes/footer.html" width="100%" height="300px" frameborder="0"></iframe>
+  </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
 </script>
+
 </html>
