--- a/index.html
+++ b/index.html
@@ -68,6 +68,24 @@
     </div>
   </div>
 
+  <div class="containner-new d-flex flex-column" >
+    <div class="what-is-TOTC">
+      <div class="div" style="color: rgb(0, 0, 0); font-size: 30px;">Cybersecurity News</div>
+      <p class="text-wrapper ">
+        TOTC is a platform that allows educators to create online classes whereby they can store the course materials
+        online; manage assignments, quizzes and exams; monitor due dates; grade results and provide students with
+        feedback all in one place.
+      </p>
+      <div class="overlap">
+        <div class="overlap-group">
+          <div class="image-container">
+            <img class="img" src="image\rectangle-21.png" alt="Image Description" />
+            <a href="#" class="read-more-button" style="color: azure;">Read More</a>
+          </div>
+          <div class="rectangle-2"></div>
+        </div>
+      </div>
+    </div>
 
 
   <div class="container">
