--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
 
   </div>
 
-  <!-- icon -->
+  <!-- Two-In-One Cloud Software. -->
   <div class="container-fluid" id="newstitle">
     <h1>Two-In-One Cloud Software.</h1>
     <p>TOTC is one powerful online software suite that combines all the tools needed to run a successful school or
       office.
     </p>
   </div>
+
   <div class="container-fluid" id="newscard">
     <div class="card" style="width: 18rem;">
       <div class="icon">
@@ -87,33 +88,12 @@
       </div>
     </div>
 
+    <!-- cer1 -->
 
-  <div class="container">
-    <div class="card-group vgr-cards">
-      <div class="card">
-        <div class="card-img-body">
-        </div>
-        <div class="card-body">
-          <h4 class="card-title">ข่าว 1 </h4>
-          <p class="card-text">Simple and secure control of your organization’s financial and legal transactions. Send
-            customized invoices and contracts.</p>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-img-body">
-          <div class="card-body">
-            <h4 class="card-title">ข่าว 2</h4>
-            <p class="card-text">Simple and secure control of your organization’s financial and legal transactions. Send
-              customized invoices and contracts.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
+<!-- 
   <footer>
     <iframe src="includes/footer.html" width="100%" height="300px" frameborder="0"></iframe>
-  </footer>
+  </footer> -->
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
