--- a/index.html
+++ b/index.html
@@ -89,6 +89,30 @@
     </div>
 
     <!-- cer1 -->
+    <div class="box_cer1">
+      <div class="you-can-do-with-TOTC_cer1">
+        <div class="overlap_cer1">
+          <div class="overlap-group_cer1">
+            <div class="ellipse_cer1"></div>
+            <p class="everything-you-can_cer1">
+              <span class="text-wrapper_cer1">Everything you can do in a physical classroom, </span>
+              <span class="span_cer1">you can do with TOTC</span>
+            </p>
+          </div>
+          <div class="div_cer1">
+            <p class="p_cer1">
+              TOTC’s school management software helps traditional and onlineschools manage scheduling, attendance, 
+              payments and virtualclassrooms all in one secure cloud-based system.
+            </p>
+            <div class="rectangle_cer1"></div>
+            <div class="rectangle-2_cer1"></div>
+            <div class="group_cer1"></div>
+            <img class="img_cer1" src="img/ellipse-13.svg" />
+          </div>
+          <div class="text-wrapper-2_cer1">Learn more</div>
+        </div>
+      </div>
+    </div>
 
 <!-- 
   <footer>
