--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <!-- navbar+header -->
+  <!-- navbar+header_ByJaf -->
   <div class="containner">
     <nav>
       <img src="image/logo_alt.png" class="logo">
@@ -88,7 +88,7 @@
       </div>
     </div>
 
-    <!-- cer1 -->
+    <!-- cer1_jaf -->
     <div class="box_cer1">
       <div class="you-can-do-with-TOTC_cer1">
         <div class="overlap_cer1">
@@ -114,10 +114,10 @@
       </div>
     </div>
 
-<!-- 
+
   <footer>
     <iframe src="includes/footer.html" width="100%" height="300px" frameborder="0"></iframe>
-  </footer> -->
+  </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
