--- a/page2.html
+++ b/page2.html
@@ -13,77 +13,6 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="stylepage2.css">
-    <style>
-        /* * {
-            padding: 0px;
-            margin: 0px;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-
-         #maincontent {
-            background-color: rgb(180, 209, 253);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 40rem;
-
-        } */
-        
-        /*
-
-        #rowtext {
-            border: 1px solid red;
-            display: flex;
-            justify-content:center;
-            align-items: center;
-            
-        }
-
-        #rowimg {
-            border: 1px solid red;
-            width: 779px;
-            height: 526.88px;
-        } */
-
-
-
-        /* #text1 {
-            display: flex;
-        }
-
-        #text1 h1 {
-            font-size: 24px;
-            font-weight: 400;
-        }
-
-        #h12 {
-            color: #4393F0;
-            margin-left: 8px;
-            font-weight: 700;
-        }
-
-        #text2 h1 {
-            color: #2F327D;
-            font-size: 44px;
-            font-weight: 600;
-        }
-
-        #text2 p {
-            color: #696984;
-            font-size: 24px;
-            font-weight: 400;
-        }
-
-        #text3 a {
-            width: 11rem;
-            background-color: rgba(67, 147, 240, 0.87);
-            color: #fff;
-            font-size: 16px;
-            font-weight: 700;
-
-        } */
-    </style>
 
 </head>
 
@@ -103,6 +32,27 @@
         </div>
         <div class="row" id="rowimg">
             <div class="col md3" id="img"><img src="./image/darkweb.png" alt="darkweb" width="100%" height="100%"></div>
+        </div>
+    </div>
+    <div class="container-fluid" id="readblog">
+        <div class="row" id="maintext">
+            <div class="col-md3">
+                <h1>Reading blog list</h1>
+            </div>
+        </div>
+        <div class="row" id="mainblog">
+            <div class="col-md3" id="blog1">
+                <div class="blogname"><h1>Cyber Attack</h1></div>
+            </div>
+            <div class="col-md3" id="blog2">
+                <div class="blogname"><h1>Malware</h1></div>
+            </div>
+            <div class="col-md3" id="blog3">
+                <div class="blogname"><h1>Cyber Threat</h1></div>
+            </div>
+            <div class="col-md3" id="blog4">
+                <div class="blogname"><h1>Vulnerability</h1></div>
+            </div>
         </div>
     </div>
 </body>
