--- a/page2.html
+++ b/page2.html
@@ -41,18 +41,35 @@
             </div>
         </div>
         <div class="row" id="mainblog">
-            <div class="col-md3" id="blog1">
-                <div class="blogname"><h1>Cyber Attack</h1></div>
-            </div>
-            <div class="col-md3" id="blog2">
-                <div class="blogname"><h1>Malware</h1></div>
-            </div>
-            <div class="col-md3" id="blog3">
-                <div class="blogname"><h1>Cyber Threat</h1></div>
-            </div>
-            <div class="col-md3" id="blog4">
-                <div class="blogname"><h1>Vulnerability</h1></div>
-            </div>
+            <a href="#">
+                <div class="col-md3" id="blog1">
+                    <div class="blogname">
+                        <h1>Cyber Attack</h1>
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="col-md3" id="blog2">
+                    <div class="blogname">
+                        <h1>Malware</h1>
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="col-md3" id="blog3">
+                    <div class="blogname">
+                        <h1>Cyber Threat</h1>
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="col-md3" id="blog4">
+                    <div class="blogname">
+                        <h1>Vulnerability</h1>
+                    </div>
+                </div>
+            </a>
+
         </div>
     </div>
 </body>
