--- a/page2.html
+++ b/page2.html
@@ -72,6 +72,184 @@
 
         </div>
     </div>
+    <div class="container-fluid mt-2 border" id="market">
+        <div class="row" id="maintext">
+            <div class="col-md3">
+                <h1>Marketing Articles</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="card" >
+                <img src="./image/card.png" class="card-img-top" alt="">
+                <div class="timeupload">
+                    <i class="fa fa-clock-o" style="font-size:1rem;"></i>
+                    <span>3 Month</span>
+                </div>
+                <div class="card-body" >
+                    <h5 class="card-title">AWS Certified solutions Architect</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipising elit, sed do eiusmod tempor</p>
+                </div>
+                <div class="cardfooter" >
+                    <div class="id">
+                        <img src="./image/card.png" alt="" width="44" height="44">
+                        <span>Lina</span>
+                    </div>
+                    <div class="visitcount">
+                        <i class="fa fa-eye" style="font-size:1rem;"></i>
+                        <span>251,232</span>
+                    </div>
+                </div>
+            </div>
+            <div class="card" >
+                <img src="./image/card.png" class="card-img-top" alt="">
+                <div class="timeupload">
+                    <i class="fa fa-clock-o" style="font-size:1rem;"></i>
+                    <span>3 Month</span>
+                </div>
+                <div class="card-body" >
+                    <h5 class="card-title">AWS Certified solutions Architect</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipising elit, sed do eiusmod tempor</p>
+                </div>
+                <div class="cardfooter" >
+                    <div class="id">
+                        <img src="./image/card.png" alt="" width="44" height="44">
+                        <span>Lina</span>
+                    </div>
+                    <div class="visitcount">
+                        <i class="fa fa-eye" style="font-size:1rem;"></i>
+                        <span>251,232</span>
+                    </div>
+                </div>
+            </div>
+            <div class="card" >
+                <img src="./image/card.png" class="card-img-top" alt="">
+                <div class="timeupload">
+                    <i class="fa fa-clock-o" style="font-size:1rem;"></i>
+                    <span>3 Month</span>
+                </div>
+                <div class="card-body" >
+                    <h5 class="card-title">AWS Certified solutions Architect</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipising elit, sed do eiusmod tempor</p>
+                </div>
+                <div class="cardfooter" >
+                    <div class="id">
+                        <img src="./image/card.png" alt="" width="44" height="44">
+                        <span>Lina</span>
+                    </div>
+                    <div class="visitcount">
+                        <i class="fa fa-eye" style="font-size:1rem;"></i>
+                        <span>251,232</span>
+                    </div>
+                </div>
+            </div>
+            <div class="card" >
+                <img src="./image/card.png" class="card-img-top" alt="">
+                <div class="timeupload">
+                    <i class="fa fa-clock-o" style="font-size:1rem;"></i>
+                    <span>3 Month</span>
+                </div>
+                <div class="card-body" >
+                    <h5 class="card-title">AWS Certified solutions Architect</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipising elit, sed do eiusmod tempor</p>
+                </div>
+                <div class="cardfooter" >
+                    <div class="id">
+                        <img src="./image/card.png" alt="" width="44" height="44">
+                        <span>Lina</span>
+                    </div>
+                    <div class="visitcount">
+                        <i class="fa fa-eye" style="font-size:1rem;"></i>
+                        <span>251,232</span>
+                    </div>
+                </div>
+            </div>
+            <div class="card" >
+                <img src="./image/card.png" class="card-img-top" alt="">
+                <div class="timeupload">
+                    <i class="fa fa-clock-o" style="font-size:1rem;"></i>
+                    <span>3 Month</span>
+                </div>
+                <div class="card-body" >
+                    <h5 class="card-title">AWS Certified solutions Architect</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipising elit, sed do eiusmod tempor</p>
+                </div>
+                <div class="cardfooter" >
+                    <div class="id">
+                        <img src="./image/card.png" alt="" width="44" height="44">
+                        <span>Lina</span>
+                    </div>
+                    <div class="visitcount">
+                        <i class="fa fa-eye" style="font-size:1rem;"></i>
+                        <span>251,232</span>
+                    </div>
+                </div>
+            </div>
+            <div class="card" >
+                <img src="./image/card.png" class="card-img-top" alt="">
+                <div class="timeupload">
+                    <i class="fa fa-clock-o" style="font-size:1rem;"></i>
+                    <span>3 Month</span>
+                </div>
+                <div class="card-body" >
+                    <h5 class="card-title">AWS Certified solutions Architect</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipising elit, sed do eiusmod tempor</p>
+                </div>
+                <div class="cardfooter" >
+                    <div class="id">
+                        <img src="./image/card.png" alt="" width="44" height="44">
+                        <span>Lina</span>
+                    </div>
+                    <div class="visitcount">
+                        <i class="fa fa-eye" style="font-size:1rem;"></i>
+                        <span>251,232</span>
+                    </div>
+                </div>
+            </div>
+            <div class="card" >
+                <img src="./image/card.png" class="card-img-top" alt="">
+                <div class="timeupload">
+                    <i class="fa fa-clock-o" style="font-size:1rem;"></i>
+                    <span>3 Month</span>
+                </div>
+                <div class="card-body" >
+                    <h5 class="card-title">AWS Certified solutions Architect</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipising elit, sed do eiusmod tempor</p>
+                </div>
+                <div class="cardfooter" >
+                    <div class="id">
+                        <img src="./image/card.png" alt="" width="44" height="44">
+                        <span>Lina</span>
+                    </div>
+                    <div class="visitcount">
+                        <i class="fa fa-eye" style="font-size:1rem;"></i>
+                        <span>251,232</span>
+                    </div>
+                </div>
+            </div>
+            <div class="card" >
+                <img src="./image/card.png" class="card-img-top" alt="">
+                <div class="timeupload">
+                    <i class="fa fa-clock-o" style="font-size:1rem;"></i>
+                    <span>3 Month</span>
+                </div>
+                <div class="card-body" >
+                    <h5 class="card-title">AWS Certified solutions Architect</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipising elit, sed do eiusmod tempor</p>
+                </div>
+                <div class="cardfooter" >
+                    <div class="id">
+                        <img src="./image/card.png" alt="" width="44" height="44">
+                        <span>Lina</span>
+                    </div>
+                    <div class="visitcount">
+                        <i class="fa fa-eye" style="font-size:1rem;"></i>
+                        <span>251,232</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
